--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Jinja2==3.1.2
 jsonschema==4.17.3
 Mako==1.2.4
 MarkupSafe==2.1.2
+marshmallow==3.19.0
 packaging==23.0
 pluggy==1.0.0
 PyJWT==2.6.0
