--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.9.2
 aniso8601==9.0.1
+apispec==6.1.0
 attrs==22.2.0
 blinker==1.5
 click==8.1.3
@@ -10,6 +11,7 @@ Flask-JWT-Extended==4.4.4
 Flask-Mail==0.9.1
 Flask-Migrate==4.0.2
 flask-restx==1.0.5
+flask-smorest==0.40.0
 Flask-SQLAlchemy==3.0.2
 greenlet==2.0.1
 iniconfig==2.0.0
@@ -20,6 +22,7 @@ Mako==1.2.4
 MarkupSafe==2.1.2
 marshmallow==3.19.0
 packaging==23.0
+passlib==1.7.4
 pluggy==1.0.0
 PyJWT==2.6.0
 pyrsistent==0.19.3
@@ -29,4 +32,5 @@ python-dotenv==0.21.1
 pytz==2022.7.1
 SQLAlchemy==1.4.46
 tomli==2.0.1
+webargs==8.2.0
 Werkzeug==2.2.2
