--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ jsonschema==4.17.3
 Mako==1.2.4
 MarkupSafe==2.1.2
 marshmallow==3.19.0
+mistune==2.0.5
 packaging==23.0
 passlib==1.7.4
 pluggy==1.0.0
@@ -30,6 +31,8 @@ pytest==7.2.1
 python-decouple==3.7
 python-dotenv==0.21.1
 pytz==2022.7.1
+PyYAML==6.0
+six==1.16.0
 SQLAlchemy==1.4.46
 tomli==2.0.1
 webargs==8.2.0
