--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,18 @@ blinker==1.5
 click==8.1.3
 colorama==0.4.6
 exceptiongroup==1.1.0
+flasgger==0.9.5
 Flask==2.2.2
+flask-apispec==0.11.4
 Flask-JWT-Extended==4.4.4
 Flask-Mail==0.9.1
 Flask-Migrate==4.0.2
 flask-restx==1.0.5
 flask-smorest==0.40.0
 Flask-SQLAlchemy==3.0.2
+flask-swagger-ui==4.11.1
 greenlet==2.0.1
+gunicorn==20.1.0
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
