--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ mistune==2.0.5
 packaging==23.0
 passlib==1.7.4
 pluggy==1.0.0
-psycopg2==2.9.5
+psycopg2-binary==2.9.5
 PyJWT==2.6.0
 pyrsistent==0.19.3
 pytest==7.2.1
